Add my bio information

--- a/Simple-CV.tex
+++ b/Simple-CV.tex
@@ -1,5 +1,5 @@
 %
-% Simple CV 
+% Simple CV
 %  Modified from for example from Sofia JIJON at the below github repo
 %  https://github.com/sjijon/TeX-templates.git
 %
@@ -31,17 +31,13 @@
 
 \MySkip 	% See MySetup.tex file
 
-Born on April 7th, 1997\\
-City -- COUNTRY\\
-Currently living in Another City\\
+\textcolor{ColorTwo}{\faEnvelopeO}
+\myhref{mailto:menyland@gmail.com}{menyland@gmail.com} \\
 
-\MySkip 	% See MySetup.tex file
-
-\textcolor{ColorTwo}{\faEnvelopeO} 
-\myhref{mailto:your.email@mail.io}{your.email@mail.io} \\
-
-\textcolor{ColorTwo}{\faChain} 
-\myhref{https://your-web-page.io}{https://your-web-page.io}
+\textcolor{ColorTwo}{\faChain}
+\myhref{https://sites.google.com/view/christopher-nyland/home}{Portfolio} \\
+%{\fontsize{https://sites.google.com/view/christopher-nyland/home}{3.6pt}\selectfont 3pt}
+\textcolor{ColorTwo}{\fontsize{3 pt}{3.6pt}\selectfont https://sites.google.com/view/christopher-nyland/home}
 \end{center}
 
 \vfill
