Add school information

--- a/Simple-CV.tex
+++ b/Simple-CV.tex
@@ -56,19 +56,8 @@
 \section*{Education}
 	\begin{description}
 	\raggedright
-	\item [\normalfont \textcolor{ColorOne}{2021.}] \textbf{PhD in
-Social Sciences}\\
-	Another University\\
-	City -- COUNTRY
-
-	\item [\normalfont \textcolor{ColorOne}{2015.}] \textbf{Masters in
-	Physics}\\
-	University\\
-	City -- COUNTRY
-
-	\item [\normalfont \textcolor{ColorOne}{2013.}] \textbf{Bachelor in arts}\\ 
-	Arts school \\
-	City -- COUNTRY
+	\item [\normalfont \textcolor{ColorOne}{2007}] \textbf{BS Mechanical Engineering} \\
+	Southern Illinois University at Edwardsville
 \end{description}
 
 \vfill
