Add work history

--- a/Simple-CV.tex
+++ b/Simple-CV.tex
@@ -85,49 +85,35 @@
 \section*{Current situation}
 \begin{description}
 \raggedright
-\item[\normalfont \textcolor{ColorOne}{Jan. 2018 -- Apr. 2021.}] \textbf{Your current job}\\ \medskip
-
-A Nice Research Lab\\
-
-Here is a short description of your current project.
-
+\item[\normalfont \textcolor{ColorOne}{Sep. 2016 - Present}] \textbf{Computer Scientist - US Army Civilian}\\ \medskip
+\begin{itemize}
+	\item Expert in digital data collection and processing
+	\item Development of hardware systems and solutions
+	\item Development of software anaylisis and visualization tools
+\end{itemize}
 \end{description}
 
 %----------------------------------------------------
 \section*{Experience}
 \begin{description}
 \raggedright
-\item[\normalfont \textcolor{ColorOne}{Sep. 2017 -- Aug. 2018.}] 
-	\textbf{Your previous job}\\ \medskip
-	
-	Your previous employer\\
-	
-	Here you describe what you did before working where you are working now. 
-	
-\item[\normalfont \textcolor{ColorOne}{Sep. 2012 -- Aug. 2017.}] 
-	\textbf{Your first job}\\ \medskip
-	
-	Your employer\\
-	
-	This could be a nice short description of your first job.
+\item[\normalfont \textcolor{ColorOne}{Feb. 2014 - Sep. 2016}] \textbf{Software Engineer III - HBM nCode} \\ \medskip
+
+\begin{itemize}
+	\item Design, wrote, maintained server side data processing software
+	\item Developed requirements for multiple embedded data collectors
+	\item Developed process to work with large datasets to avoid memory and I/O issues
+\end{itemize}
+
+
+\item[\normalfont \textcolor{ColorOne}{Sep 2007 - Feb. 2014}] \textbf{Engineer III - Jacobs Technologies}
+	\begin{itemize}
+		\item Completed hundreds of test on vehicles and other military systems
+		\item Planned and installed instrumentation packages
+		\item Develop tools and GUIs to simplify data collection and analysis for entire organization
+	\end{itemize}
 \end{description}
 
-%----------------------------------------------------
-\section*{Publications}
-\begin{description}
-	\raggedright
-	\item \underline{Name, Y.}, Second Author, N., Third Author, N. et al. \textbf{(2019)} A great title {\it Journal}. doi:~\myhref{https://doi.org/xx.yyy/zzz.12345}{xx.yyy/zzz.12345}
-
-	\item First Author, T., \underline{Name, Y.}, Third Author, N. et al. \textbf{(2015)} A long title for a great study{\it Journal}. doi:~\myhref{https://doi.org/xx.yyy/zzz.54321}{xx.yyy/zzz.54321}
-	
-\end{description}
-%----------------------------------------------------
-\section*{Oral communications}
-\begin{description}
-	\raggedright
-	\item \underline{Name, Y.}, Second Author, N., Third Author, N. et al. \textbf{(2019)} The title of a talk you did. {\it Conference}, November 16, 2006, City, Country.
-\end{description}
-%----------------------------------------------------
 \section*{Another section}
 \begin{description}
 	\raggedright
