Add programming language visualization

--- a/Simple-CV.tex
+++ b/Simple-CV.tex
@@ -122,12 +122,15 @@
 
 \MySkip
 %----------------------------------------------------
+
 \begin{multicols}{2}
-\section*{Numerical tools}
+
+\section*{Programming Languages}
 \begin{tabular}{ll}
-	R  			& \SkillBull{$\bullet \bullet \bullet \, \circ$}\\
-	Matlab 		& \SkillBull{$\bullet \bullet \bullet \, \circ$}\\
-	Mathematica 	& \SkillBull{$\bullet \circ \circ \, \circ$}\\
+	Python  			& \SkillBull{$\bullet \bullet \bullet$}\\
+	Matlab 		& \SkillBull{$\bullet \bullet \circ$}\\
+	C\textbackslash C++        &\SkillBull{$\bullet \bullet \circ$}\\
+	Javascript  &\SkillBull{$\bullet \circ \circ$}\\
 \end{tabular}
 
 \vfill\null \columnbreak  % Break column for new section
