Change color two to a green blue
I like green better than mauve.

--- a/mysetup.tex
+++ b/mysetup.tex
@@ -32,7 +32,8 @@
 % Color theme
 %
 \definecolor{ColorOne}{RGB}{0,110,140} 	% Blue
-\definecolor{ColorTwo}{RGB}{120,0,120} 	% Mauve
+%\definecolor{ColorTwo}{RGB}{120,0,120} 	% Mauve
+\definecolor{ColorTwo}{RGB}{0, 100, 50}
 %\definecolor{ColorTwo}{RGB}{140,100,0} 	% Gold
 
 \sectionfont{\color{ColorOne}} 
