Add Rust as a language
The diff shows a bunch of other white space changes here
I didn't really think I changed anything. Anyway the only
think I really added was Rust as a language.

--- a/Simple-CV.tex
+++ b/Simple-CV.tex
@@ -134,10 +134,11 @@
 \begin{multicols}{2}
 	\section*{Prog. Languages}
 	\begin{tabular}{ll}
-	Python  			& \SkillBull{$\bullet \bullet \bullet$}\\
-	Matlab 		& \SkillBull{$\bullet \bullet \circ$}\\
-	C\textbackslash C++        &\SkillBull{$\bullet \bullet \circ$}\\
-	Javascript  &\SkillBull{$\bullet \circ \circ$}\\
+		Python  			& \SkillBull{$\bullet \bullet \bullet$}\\
+		Matlab 		& \SkillBull{$\bullet \bullet \circ$}\\
+		C\textbackslash C++        &\SkillBull{$\bullet \bullet \circ$}\\
+		Rust  &\SkillBull{$\bullet \circ \circ$}\\
+		Javascript  &\SkillBull{$\bullet \circ \circ$}\\
 	\end{tabular}
 
 	\vfill\null \columnbreak  % Break column for new section
@@ -148,7 +149,7 @@
 		\item Rock Climbing
 		\item 3D Printing
 		\item Small electronics
-\end{itemize}
+	\end{itemize}
 \end{multicols}
 
 
