--- a/Simple-CV.tex
+++ b/Simple-CV.tex
@@ -100,10 +100,10 @@
 \item[\normalfont \textcolor{ColorOne}{Sep. 2016 - Present}] \textbf{Computer Scientist - US Army Civilian}\\ \medskip
 \begin{itemize}[align=right, itemindent=-1.5em,leftmargin=0pt]
 	\item Promoted to Army-wide technical expert for logistics architecture
-	\item Lead architect for new logistics capabilites
+	\item Lead architect for new logistics capabilities
 	\item Standards data manager for key Army logistics standards
 	\item Developer of hardware systems and solutions
-	\item Developer of software anaylisis and visualization tools
+	\item Developer of software analysis and visualization tools
 \end{itemize}
 \end{description}
 
