Normalize case in interest bullets
My bullets had a mix of upper and lower case words. I am updating
all the bullets so only the first word is capitalized.

--- a/Simple-CV.tex
+++ b/Simple-CV.tex
@@ -51,8 +51,8 @@
 \section*{Interests}
 \raggedright
 \textcolor{ColorOne}{$\circ$} Automation\\
-\textcolor{ColorOne}{$\circ$} Building Tools and Standardization\\
-\textcolor{ColorOne}{$\circ$} The intersection of hardware and software\\
+\textcolor{ColorOne}{$\circ$} Building tools and standardization\\
+\textcolor{ColorOne}{$\circ$} Intersection of hardware and software\\
 \textcolor{ColorOne}{$\circ$} Modular design\\
 \textcolor{ColorOne}{$\circ$} Making the world a better place\\
 
