Make interest bullets more concise
Just updating some of the wording in the interest bullets to
make them shorter.

--- a/Simple-CV.tex
+++ b/Simple-CV.tex
@@ -50,8 +50,8 @@
 %----------------------------------------------------
 \section*{Interests}
 \raggedright
-\textcolor{ColorOne}{$\circ$} Automation\\
-\textcolor{ColorOne}{$\circ$} Building tools and standardization\\
+\textcolor{ColorOne}{$\circ$} Automation for everything\\
+\textcolor{ColorOne}{$\circ$} Building tools and standards\\
 \textcolor{ColorOne}{$\circ$} Intersection of hardware and software\\
 \textcolor{ColorOne}{$\circ$} Modular design\\
 \textcolor{ColorOne}{$\circ$} Making the world a better place\\
